# stillapp

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci-ai-service.yml  ci-api.yml  ci-libs.yml  ci-mobile.yml  ci-web.yml
.plans/: still-nx-monorepo-a9ccd8.md
apps/ai-service/: project.json  pyproject.toml
apps/ai-service/src/: config.py  main.py
apps/ai-service/src/routers/: embeddings.py  transcription.py
apps/ai-service/src/services/: embedding_service.py  transcription_service.py
apps/ai-service/tests/: test_health.py
apps/api/: tsconfig.app.json
apps/desktop/: package.json  project.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/src/app/: App.tsx
apps/web/: vite.config.ts
apps/web/src/app/: app.tsx
libs/api-contracts/: project.json  vite.config.ts
libs/domain/intelligence/: project.json  vite.config.ts
libs/domain/intelligence/src/: index.ts
libs/domain/intelligence/src/lib/: intelligence.spec.ts  intelligence.ts
libs/domain/intelligence/src/lib/entities/: still-moment.ts
libs/domain/publishing/: project.json  vite.config.ts
libs/domain/publishing/src/: index.ts
libs/domain/publishing/src/lib/: publishing.spec.ts  publishing.ts
libs/domain/writing/: project.json  vite.config.ts
libs/domain/writing/src/: index.ts
libs/domain/writing/src/lib/: writing.spec.ts  writing.ts
libs/ui/native/: vite.config.ts
libs/ui/native/src/lib/: ui-native.spec.ts  ui-native.ts
libs/ui/web/: vite.config.ts
libs/ui/web/src/lib/: ui-web.tsx
(+15 files in other folders)
