[package]
name = "still-desktop"
version = "0.1.0"
description = "Still — Desktop App"
authors = ["still"]
edition = "2021"

[lib]
name = "still_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "still-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
